Added new files, finished the nav bar with animation, starting home page slider

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -6,7 +6,7 @@ $txt-color: #fff;
 $white: #fff;
 $black: #000;
 
-$heder-height: 9.5rem;
+$header-height: 9.5rem;
 $border-radius: 30px;
 
 $mobile-width: 600px;
