--- a/src/App.scss
+++ b/src/App.scss
@@ -141,6 +141,8 @@ iframe {
 	animation: bounce 3s ease infinite;
 }
 
+//Scroll down animation
+
 @keyframes bounce {
 	0% {
 		transform: translateX(-50%) translateY(0);
