--- a/src/App.scss
+++ b/src/App.scss
@@ -141,7 +141,7 @@ iframe {
 	animation: bounce 3s ease infinite;
 }
 
-//Scroll down animations
+//Scroll down animation
 
 @keyframes bounce {
 	0% {
